--- a/app/src/main/res/layout/fragment_mortgage.xml
+++ b/app/src/main/res/layout/fragment_mortgage.xml
@@ -3,10 +3,17 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
+<!--    <ListView
         android:id="@+id/mortageList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollingCache="false" />
+        android:scrollingCache="false" />-->
+
+    <TextView
+        android:textColor="#f50234"
+        android:textSize="30sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="HELLO WORLD"/>
 
 </LinearLayout>
