--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -8,8 +8,11 @@
     <TextView
         android:id="@+id/header"
         android:text="@string/product"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:ems="2"
         android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="50dp" />
 
 </LinearLayout>
