--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -10,6 +10,7 @@
         android:text="@string/product"
         android:textStyle="bold"
         android:textSize="20sp"
+        android:textColor="#fff"
         android:ems="2"
         android:gravity="center"
         android:layout_width="match_parent"
