--- a/app/src/main/res/drawable/rounded_edit_text.xml
+++ b/app/src/main/res/drawable/rounded_edit_text.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <solid android:color="#FFFFFF" />
-
+    <gradient android:angle="90" android:endColor="#DCDCDC" android:startColor="#F8F8FF" android:type="linear" />
     <stroke
         android:width="1dp"
         android:color="#2f6699" />
-
     <corners
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp" />
-
 </shape>
