--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:id="@+id/product"
-        android:textColor="#fff"
+        android:textColor="#000"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
