--- a/app/src/main/res/layout/activity_deposits_info.xml
+++ b/app/src/main/res/layout/activity_deposits_info.xml
@@ -47,6 +47,7 @@
         android:text="@string/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
