--- a/app/src/main/res/drawable/gradient_spinner.xml
+++ b/app/src/main/res/drawable/gradient_spinner.xml
@@ -6,10 +6,10 @@
         <layer-list>
             <item>
                 <shape>
-                    <gradient android:angle="90" android:endColor="#DCDCDC" android:startColor="#F8F8FF" android:type="linear" />
-                    <stroke android:width="1dp" android:color="#000000" />
-                    <corners android:radius="10dp" />
+                    <gradient android:angle="90" android:startColor="#80b3c0ff" android:endColor="#80b3c0ff" android:type="linear" />
+                    <stroke android:width="0.1dp" android:color="#000000" />
                     <padding android:bottom="3dp" android:left="3dp" android:right="3dp" android:top="3dp" />
+                    <corners android:radius="2dp" />
                 </shape>
             </item>
             <item>
