--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -6,5 +6,5 @@
     android:layout_height="wrap_content"
     android:gravity="center"
     android:textSize="20sp"
-    android:textColor="#000"
+    android:textColor="#fff"
     android:padding="5dip" />
