--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -9,9 +9,10 @@
     android:paddingRight="15dp">
 
     <LinearLayout
+        android:id="@+id/searchForm"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="40dp">
+        android:layout_height="45dp">
 
         <Spinner
             android:id="@+id/loans"
