--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -52,6 +52,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
+        android:scrollbarThumbVertical="@drawable/custom_scroll_style"
+        android:scrollbarStyle="outsideInset"
         android:layout_marginTop="10dp">
 
     </ScrollView>
