--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -8,7 +8,6 @@
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="0.5px"
-        android:layout_marginTop="15dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:visibility="gone"
@@ -16,9 +15,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:paddingLeft="10dp"
-        android:paddingTop="15dp">
+        android:layout_height="25dp"
+        android:layout_margin="6dp">
 
         <ImageView
             android:id="@+id/image"
