--- a/app/src/main/res/layout/abs_layout.xml
+++ b/app/src/main/res/layout/abs_layout.xml
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:textColor="#ffffff"
+        android:textColor="#fff"
         android:textSize="18sp" />
 
 </LinearLayout>
