--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,13 +5,13 @@
     </style>
 
     <style name="CustomActionBarTheme"
-        parent="@android:style/Theme.Holo.Light.DarkActionBar">
-        <item name="android:actionBarStyle">@style/MyActionBar</item>
+        parent="android:style/Theme.Holo.Light.DarkActionBar">
+        <item name="actionBarStyle">@style/MyActionBar</item>
     </style>
 
     <!-- ActionBar styles -->
     <style name="MyActionBar"
-        parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
+        parent="android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
         <item name="android:background">#003340</item>
     </style>
 
