--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -50,12 +50,21 @@
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginBottom="10dp"
         android:scrollbarThumbVertical="@drawable/custom_scroll_style"
         android:scrollbarStyle="outsideInset"
+        android:layout_above="@+id/banner"
+        android:layout_below="@+id/searchForm"
         android:layout_marginTop="10dp">
 
     </ScrollView>
 
-</LinearLayout>
+    <include
+        layout="@layout/banner_layout"
+        android:id="@+id/banner"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_alignParentBottom="true"/>
+
+</RelativeLayout>
